--- a/requirements.txt
+++ b/requirements.txt
@@ -1,8 +1,10 @@
 torch>=1.1
-torchvision
-numpy
-tqdm
+torchvision~=0.2.2.post3
+numpy===1.19.3
+tqdm~=4.54.1
 tensorboard>=1.14
-lpips
-pandas
-rawpy
+lpips~=0.1.3
+pandas~=1.1.5
+rawpy~=0.16.0
+pytest~=6.2.1
+opencv-python>=4.4.0.46
